--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -15,3 +15,7 @@
 # RELEASE_DISTRIBUTION must be "sname" (local), "name" (distributed) or "none".
 # export RELEASE_DISTRIBUTION=name
 # export RELEASE_NODE=<%= @release.name %>
+
+ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
+export RELEASE_DISTRIBUTION=name
+export RELEASE_NODE=$FLY_APP_NAME@$ip
